tests/compile-fail/integration__integration__enums__deduction_in_const_fn.snap
---
source: tests/integration/enums.rs
expression: stderr
---
error: unexpected token `enum`
   ┌─ <input>:26:27
   │
26 │         const int ConstFn(enum FooEnum x) {
   │                           ^^^^ unexpected token
   │
   = 
     Expected one of ")", "float", "int", "string", "var" or "void"


